feat(pages): add initial pages and layout structure
- Created `ContactPage`, `CurriculumPage`, `NotFoundPage`, `ProjectDetailsPage`, and `ProjectsPage` components.
- Implemented `Layout` component to serve as a wrapper for routing.
- Updated `main.tsx` to configure routing with `react-router-dom`.
- Bumped version to `1.0.0` in `package.json` and `package-lock.json`.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "portfolio-website",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "dev:mobile": "vite --host",
     "dev:preview": "vite preview --host",
+    "prebuild": "npx ttf2woff2 src/assets/fonts/*.ttf",
     "build": "tsc -b && vite build",
     "lint": "eslint ."
   },
