--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,12 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Directories
 node_modules
 dist
 dist-ssr
 *.local
+docs
 
 # Editor directories and files
 .github
@@ -23,3 +25,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+#
